remove href='#' from <a> for menu_title & menu_item, preventing jump to top of page when clicking on it
git-svn-id: https://svn.sinaapp.com/httpaddress@27 1754ffac-ff99-4cfc-a3db-e2205e847581

--- a/1/css/style.css
+++ b/1/css/style.css
@@ -343,6 +343,7 @@ ul, ol, li {
 .menu_title, .menu_item {
     text-decoration: none;
     padding: 0 5px;
+	cursor: pointer;
 }
 .menu_title:hover, .menu_item:hover {
     background-color: #D9E6FF;
